syntax = "proto3";
package tss.common;
option go_package = "./common";

message BootstrapMessage {
    string ChannelId = 1;
    bytes PeerInfo = 2;
    string addr = 3;
}
